--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = raveup_qr_reader
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.raveupQrReader
+PRODUCT_BUNDLE_IDENTIFIER = co.raveup.raveupQrReader
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2023 com.example. All rights reserved.
+PRODUCT_COPYRIGHT = Copyright © 2023 co.raveup. All rights reserved.
